--- a/src/components/DailyCaloriesForm/DailyCaloriesForm.css
+++ b/src/components/DailyCaloriesForm/DailyCaloriesForm.css
@@ -67,42 +67,124 @@
   }
   
 /* DailyCaloriesForm.css */
+/* Modal */
 
+/* Overlay */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #2121211F;
+ /* gri deschis */
+  z-index: 999; /* asigură-te că este sub modal */
+  display: none; /* ascunsă în mod implicit */
+}
+
+/* Când modalul este deschis, overlay devine vizibil */
+.modal-open .overlay {
+  display: block;
+}
+
+.modal-open body {
+  background:#2121211F;
+  /* schimbă fundalul paginii în gri deschis */
+}
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  
-  .modal-content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    width: 400px;
-    text-align: center;
-  }
-  
-  .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    font-size: 20px;
-  }
-  
-  button.submit-btn {
-    background-color: #f77f00;
-    color: white;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
+  position: fixed;
+  top: 138px;
+  left: 304px;
+  width: 672px;
+  height: 574px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 22px 40px 0px #0000001A;
+  border-width: 1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  font-family: Verdana;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 36.4px;
+  letter-spacing: 0%;
+  text-align: center;
+  padding: 20px;
+  border-radius: 8px;
+  position: relative;
+  top: -25px;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: -40px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.modal h3 {
+  margin-top: 44px;
+  max-width: 508px;
+  margin-bottom: 20px;
+}
+
+.kcal {
+  font-size: 48px;
+}
+
+.modal p {
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.modal hr {
+  border: 0;
+  border-top: 1px solid lightgray;
+  margin: 12px auto;
+  width: 330px;
+}
+
+.modal h4 {
+  font-size: 14px;
+  text-align: left;
+  padding-left: 90px;
+  margin-bottom: 20px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+ul li {
+  text-align: left;
+  padding-left: 90px;
+  font-family: Verdana;
+  font-weight: 400;
+  font-size: 14px;
+  color: #9B9FAA;
+  line-height: 17.01px;
+  letter-spacing: 4%;
+  margin-bottom: 15px;
+}
+
+.start-btn {
+  background-color: #FC842D;
+  position: relative;
+  top: 20px;
+  left: 0px;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 30px;
+  font-weight: 700;
+  font-size: 16px;
+  text-align: center;
+}
