--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -67,4 +67,7 @@
   .login-btn:hover, .register-btn:hover {
     opacity: 0.8;
   }
-  
+  .buttons {
+    display: flex;
+    flex-direction: row;
+}  
