--- a/src/components/DiaryAddProductForm/DiaryAddProductForm.css
+++ b/src/components/DiaryAddProductForm/DiaryAddProductForm.css
@@ -6,9 +6,11 @@
   
   .searchInput {
     max-width: 240px;
+    border: none;
+    text-align: left;
     padding: 8px;
     font-size: 14px;
-    border: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
     border-radius: 4px;
   }
   
@@ -47,7 +49,10 @@
     padding: 8px;
     font-size: 14px;
     border: 1px solid #ccc;
+    color: #9B9FAA;
+    font-family: Verdana;
     border-radius: 4px;
+    text-align: left;
   }
   
   .searchResults {
@@ -82,140 +87,127 @@
 
   .productForm {
     width: 590px;
+    top: 300px;
+    margin-left: 16px;
   }
   
   .gramsInput {
     max-width: 105px;
+    font-weight: 700;
+    color: #9B9FAA;
+    font-family: Verdana;
+  }
+
+.gramsInput::placeholder {
+    text-align: right;
+}
+
+.searchInput::placeholder {
+    text-align: left;
+}
+
+  .productList {
+    margin-top: 200px;
+    position: relative;
+    top: 200px;
+  }
+
+  .productList li {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .removeButton {
+    top: -10px;
+    left: 0;
+    color: #9B9FAA;
+    background-color: transparent;
+    margin-left: 10px;
+    font-size: 18px;
+    font-weight: 300;
+    width: 28px;
+    height: 48px;
+  }
+
+  .productList {
+    max-height: 330px; /* Sau cât dorești */
+    overflow-y: auto;
+    padding: 0;
+    max-width: 735px;
+    margin-top: -100px;
+    margin-left: -70px;
+  }
+
+  
+  .containerProductForm {
+    height: 450px;
+  }
+
+  .productRow {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+    margin-bottom: 48px;
   }
   
-  /* import React, { useState, useEffect } from 'react';
-import './DiaryAddProductForm.css';
-import axios from 'axios';
-// const ForbiddenFood = require('../DailyCalorieIntake/ForbiddenFoods');
+  .productColumn {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    text-align: center;
+    font-size: 14px;
+  }
+  
+  .nameColumn {
+    max-width: 240px;
+    margin-right: 30px;
+    text-align: left;
+  }
+  
+  .gramsColumn {
+    max-width: 107px;
+    text-align: right;
+  }
+  
+  .kcalColumn {
+    max-width: 106px;
+    text-align: right;
+  }
+  
+  .line-1 {
+    width: 240px;
+    height: 1px;
+    background-color: #ccc;
+    margin-top: 8px;
+  }
 
-// const foodEntries = await ForbiddenFood.find();
-// const forbiddenData = foodEntries
-// .map((food) => food);
-// console.log('dta',forbiddenData)
+  .line-2 {
+    width: 107px;
+    height: 1px;
+    background-color: #ccc;
+    margin-top: 8px;
+  }
 
-const DiaryAddProductForm = ({ addProductToList, allForbiddenFoods, selectedDate, updateCalories }) => {
-  const [productName, setProductName] = useState('');
-  const [grams, setGrams] = useState('');
-  const [selectedFood, setSelectedFood] = useState(null);
-  const [searchTerm, setSearchTerm] = useState('');
-  const [filteredForbiddenFoods, setFilteredForbiddenFoods] = useState([]);
-  const [productList, setProductList] = useState([]);
-
-  const [allFoods, setAllFoods] = useState([]);
-  const [filteredFoods, setFilteredFoods] = useState([]);
-
-  useEffect(() => {
-    const fetchForbiddenFoods = async () => {
-      try {
-        const response = await axios.get('http://localhost:5000/dailycalorieintake/forbiddenFoods');
-        setAllFoods(response.data); // Salvează obiectele complete în state
-      } catch (error) {
-        console.error('Error fetching forbidden foods:', error);
-      }
-    };
-    fetchForbiddenFoods();
-  }, []);
-
-  useEffect(() => {
-    const filtered = allFoods.filter((food) =>
-        food.title.toLowerCase().includes(searchTerm.toLowerCase())
-      );
-      setFilteredFoods(filtered);
-    }, [searchTerm, allFoods]);
-
-
-
-  const handleSubmit = (e) => {
-    e.preventDefault();
-    
-    // Verificăm dacă există produsul selectat și gramajul
-    if (!grams || !selectedFood) return;
-
-    // Calculăm caloriile pentru produsul introdus
-    const calories = (selectedFood.calories * grams) / 100;
-
-    // Creăm obiectul pentru produsul nou
-    const newProduct = {
-      id: Date.now(), // Creăm un ID unic folosind timestamp
-      date: selectedDate,
-      name: selectedFood,
-      grams,
-      calories: Math.round(calories),
-    };
-
-    // Adăugăm produsul în lista locală
-    setProductList((prevList) => [...prevList, newProduct]);
-
-    // Trimit produsul adăugat către funcția părinte
-    addProductToList(newProduct);
-
-    // Actualizăm caloriile
-    updateCalories(Math.round(calories));
-
-    // Resetăm formularul
-    setProductName('');
-    setGrams('');
-    setSelectedFood(null);
-    setSearchTerm('');
-  };
-
-  const handleFoodSelect = (food) => {
-    setProductName(food);
-    setSelectedFood(food);
-    setSearchTerm(food);
-    setFilteredForbiddenFoods([]); // Resetează lista de sugestii după selecția unui produs
-  };
-
-  const handleRemoveProduct = (id, calories) => {
-    // Eliminăm produsul din lista locală
-    setProductList((prevList) => prevList.filter((product) => product.id !== id));
-    // Reducem caloriile
-    updateCalories(-calories);
-  };
-
-  return (
-    <div>
-      <form onSubmit={handleSubmit} className="productForm">
-        <div className={`searchForbiddenFoods ${searchTerm && filteredForbiddenFoods.length > 0 ? 'active' : ''}`}>
-          <input
-            type="text"
-            placeholder="Enter product name..."
-            value={searchTerm}
-            onChange={(e) => setSearchTerm(e.target.value)}
-            className="searchInput"
-          />
-          <ul className="searchResults">
-            {filteredForbiddenFoods.map((food) => (
-              <li key={food._id} onClick={() => handleFoodSelect(food)}>
-                  {food.title} - {food.calories} kcal/100g</li>
-            ))}
-          </ul>
-        </div>
-        <input
-          type="number"
-          placeholder="Grams"
-          value={grams}
-          onChange={(e) => setGrams(e.target.value)}
-          className="gramsInput"
-          required
-        />
-        <button type="submit" className="addButton">+</button>
-      </form>
-
- <ul className="searchResults">
-//             {filteredFoods.map((food) => (
-//               <li key={food._id} onClick={() => handleFoodSelect(food)}>
-//                 {food.title} - {food.calories} kcal/100g
-//               </li>
-//             ))}
-//           </ul>
-    </div>
-  );
-};
-
-export default DiaryAddProductForm; */
+  .line-3 {
+    width: 106px;
+    height: 1px;
+    background-color: #ccc;
+    margin-top: 8px;
+  }
+  
+  
+  .productList::-webkit-scrollbar {
+    width: 8px;
+    margin-right: 30px;
+  }
+  
+  .productList::-webkit-scrollbar-thumb {
+    background-color: #264061;
+    border-radius: 4px;
+  }
+  
+  .productList::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 4px;
+  }
+  
