--- a/src/pages/DiaryPage/DiaryPage.css
+++ b/src/pages/DiaryPage/DiaryPage.css
@@ -75,16 +75,17 @@
 
 .calendarLabel {
   font-size: 1.5rem;
-  margin-top: -60px;
-  cursor: pointer;
+  margin-top: -36px;
+  margin-left: -10px;
+  width: 50px;
+  height: 50px;
 }
 
 .calendarPicker {
   position: absolute;
-  left: 260px;
-  top: 0;
-  width: 30px;
-  height: 30px;
+  left: 270px;
+  top: 15px;
+  width: 20px;
   opacity: 0%;
   cursor: pointer;
 }
