--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -1,21 +1,27 @@
 /* Main Page styling */
 .page-container {
-    max-width: 1280px;
-    max-height: 850px;
-    position: absolute;
-    z-index: 1;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  min-width: 1280px;
+  width: 100%;
+  height: 850px;
+  overflow: hidden;
 }
+
+
 
 .main {
     width: 608px;
     height: 343px;
-    margin-left: 16px;
+    padding-left: 16px;
 }
 
 .main h1 {
     font-family: Verdana, sans-serif;
     font-size: 34px;
     font-weight: 700;
+    width: 608px;
     margin-bottom: 68px;
   }
   
@@ -40,7 +46,7 @@ form {
   }
 
   input {
-    margin-bottom: 40px;
+    margin-bottom: 25px;
   }
   
   input,
@@ -76,3 +82,52 @@ form {
     background-color: #ff7a1c;
   }
   
+  /* TABLETĂ (768px - 1280px) */
+  @media (max-width: 1280px) {
+.main { 
+  min-width: 608px;
+  max-width: 704px;
+  width: 100%;
+  }
+  
+  .main h1 {
+    margin-top: 120px;
+  }
+
+  .page-container {
+    min-width: 768px;
+    width: 100%;
+    max-height: 1279px;
+    height: 1024px;
+    overflow: hidden;
+}
+}
+
+@media (max-width: 768px) {
+
+  .main h1 {
+    font-size: 18px;
+    min-width: 280px;
+    width: 100%;
+    max-width: 480px;
+    padding-right: 20px;
+    margin: 32px auto 34px;
+  }
+
+  .main {
+    min-width: 280px;
+    max-width: 704px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+
+  .page-container {
+    min-width: 280px;
+    max-width: 704px;
+    width: 100%;
+    height: 718px;
+    margin: 0 auto;
+  }
+
+}
