--- a/src/components/DiaryProductsListItem/DiaryProductsListItem.css
+++ b/src/components/DiaryProductsListItem/DiaryProductsListItem.css
@@ -1,21 +1,12 @@
-/* MOBIL (320px - 768px)
+.modal-btn {
+    display: none;
+}
+/* 
+MOBIL (320px - 768px) */
 @media (max-width: 768px) {
-    .product-item {
-        position: absolute;
-    }
-    .close-btn {
-        position: absolute;
-        top: -120px;
-        left: -700px;
+    .modal-btn {
+        display: block;
     }
 
-    .close-btn::before {
-        content: "🠔";
-        font-weight: 700;
-        font-size: 30px;
-        background-color: #EFF1F3;
-        min-width: 320px;
-        padding: 20px 660px;
-    }
-} */
+}
 
