--- a/src/components/DailyCaloriesForm/DailyCaloriesForm.css
+++ b/src/components/DailyCaloriesForm/DailyCaloriesForm.css
@@ -8,6 +8,10 @@
   .form {
     max-width: 608px;
 }
+
+.modal-btn {
+  display: none;
+}
   
   .blood-type-label {
     display: flex;
@@ -134,7 +138,9 @@ height: 43px;
 .close-btn {
   position: absolute;
   top: 10px;
-  right: -40px;
+  color: black;
+  background-color: transparent;
+  left: 520px;
   font-size: 20px;
   cursor: pointer;
 }
@@ -173,6 +179,7 @@ ul {
   list-style-type: none;
   padding: 0;
 }
+
 
 ul li {
   text-align: left;
@@ -217,6 +224,14 @@ ul li {
     }
 
 @media (max-width: 768px) {
+  .modal-content h3 {
+    font-size: 18px;
+    margin: 0 5px 42px;
+  }
+
+  .modal-content h4 {
+    padding: 35px;
+  }
   .form {
     display: flex;
     flex-direction: column;
@@ -229,7 +244,16 @@ ul li {
     left: 50%;
     top: 33%; 
     
-  }  
+  } 
+  
+  .modal-list  li{
+    padding: 0;
+  }
+
+  .modal-list {
+    max-width: 280px;
+    margin: 0 auto;
+  }
   
   .form label,
   .form input {
@@ -251,16 +275,51 @@ ul li {
   .modal {
     max-width: 768px;
     width: 100%;
-    height: 597px;
-    min-width: 280px;
-height: 568px;
+    height: 92%;
+    margin-top: 40px;
 background-color: white;
 left: 50%;
+border-top: 2px solid gray;
+z-index: 800;
   }
 
+.overlay {
+  /* background-color: #EFF1F3; */
+  min-width: 320px;
+  max-width: 768px;
+  width: 100%;
+  top: 30.5px;
+  height: 40px;
+  margin-top: 70px;
+  z-index: 999;
+}
 
-  .overlay {
+  .close-btn {
     display: none;
+  }
+
+  .modal-btn {padding: 0;
+    margin-left: 80px;
+    position: absolute;
+    display: block;
+    top: -100px;
+    left: -149px;
+    font-size: 30px;
+    color: black;
+    background-color: transparent;
+    z-index: 2000;
+  }
+
+  .modal-content {
+    height: 300px;
+    margin-top: -380px;
   }
   
     }
+
+    /* @media (max-width: 458px) {
+      .modal-btn {
+        top: -175px;
+        margin-left: 110px;
+      }
+    } */
