--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -120,11 +120,11 @@
     min-width: 320x;
     max-width: 768px;
     width: 100%;
-    margin-left: -20px;
+    margin-left: -18px;
   }
 
   .header__nav {
-    margin-left: -15px;
+    gap: 9px;
   }
 
   .logo__image {
@@ -136,4 +136,5 @@
 .logo__slim{
   display: none;
 }
+
 }
