--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,4 +1,20 @@
 
+  .login-container {
+    min-width: 1280px;
+    width: 100%;
+    height: 850px;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .login-background {
+    position: relative;
+    top: -400px;
+    height: 850px;
+    min-width: 1280px;
+    width: 100%;
+  }
+
   .login-title {
     color: #FC842D;
     margin: 20px 16px 55px;
@@ -78,4 +94,77 @@
   .login-btn:hover, .register-btn:hover {
     opacity: 0.8;
   }
+
+    /* TABLETĂ (768px - 1280px) */
+    @media (max-width: 1280px) {
+      .login-container { 
+        min-width: 768px;
+        max-width: 1280px;
+        width: 100%;
+        height: 1024px;
+        overflow: hidden;
+        }
+
+        .login-background {
+          top: -290px;
+          min-width: 768px;
+          height: 1024px;
+        }
+
+        .login-form {
+          margin-top: 176px;
+          margin-bottom: 55px;
+        }
+      }
+
+@media (max-width: 768px) {
+  .login-background {
+    display: none;
+  }
+
+  .login-container {
+    min-width: 320px;
+    max-width: 768px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .buttons {
+    display: flex;
+    align-content: center;
+    flex-direction: row;
+    margin: 0 auto;
+    flex-wrap: wrap;
+  }
+
+  .login-btn,
+  .register-btn {
+    width: 182px;
+    margin: 0 auto;
+  }
+
+  .form-data {
+    min-width: 280px;
+    max-width: 400px;
+    width: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    top: 30%;
+  }
+
+  .login-form {
+    width: 100%;
+    max-width: 768px;
+    height: 700px;
+    margin: 0 auto;
+  }
+
+  .form-data label , 
+  .form-data input {
+     margin: 0 auto;
+     min-width: 280px;
+     max-width: 400px;
+     width: 100%;
+  }
+}
   
