--- a/src/pages/CalculatorPage/CalculatorPage.css
+++ b/src/pages/CalculatorPage/CalculatorPage.css
@@ -1,13 +1,16 @@
 .container {
     display: flex;
-    max-width: 1280px;
     height: 557px;
     align-content: space-between;
     margin-top: 145px;
+      min-width: 1280px;
+      width: 100%;
+      position: relative;
   }
   
   .leftPanel {
-    width: 763px;
+    min-width: 763px;
+    width: 100%;
     height: 557px;
   }
 
@@ -23,8 +26,10 @@ margin-bottom: 68px;
   }
   
   .rightPanel{
-    max-width: 517px;
+    min-width: 517px;
+    width: 100%;
 height: 850px;
+position: relative;
   }
 
   .leftPanel form {
@@ -32,6 +37,95 @@ height: 850px;
     height: 700px;
   }
 
+  
+
+    /* TABLETĂ (768px - 1280px) */
+    @media (max-width: 1280px) {
+      .container {
+        flex-direction: row;
+        flex-wrap: wrap;
+        min-width: 768px;
+        max-width: 1280px;
+        width: 100%;
+        height: 1024px;
+      }
+
+      .leftPanel {
+        height: 594px;
+        padding-left: 10px;
+        min-width: 768px;
+        max-width: 1280px;
+        width: 100%;
+        margin-bottom: 350px;
+        margin-top: -120px;
+        padding-top: 100px;
+        border-top: 1px solid grey;
+      }
+
+      .header__logo {
+        padding-left: 20px;
+      }
+
+      .rightPanel {
+        height: 326px;
+        min-width: 768px;
+        max-width: 1280px;
+        width: 100%;
+      }
+
+      .rightSideBar {
+        height: 326px;
+        min-width: 768px;
+        max-width: 1280px;
+        width: 100%;
+
+        display: flex;
+        gap: 79px;
+        margin: 0 auto;
+        
+    }
+      .summary,
+      .notRecommendedFoods {
+        width: 288px;
+height: 166px;
+z-index: 200;
+margin: 0 auto;
+      }
+
+.summary {
+  margin-top: -60px;
+}
+
+      .header,
+      .full-container,
+      .form {
+        min-width: 768px;
+        max-width: 1280px;
+        width: 100%;
+      }
+
+      .nav__separator{
+        display: none;
+      }
+      .form {
+        left: 20px;
+      }
+      .nav__separator {
+        min-width: 768px;
+        max-width: 1680px;
+        left: -30px;
+        width: 100%;
+      }
+
+      .userInfo {
+        display: none;
+        /* position: relative;
+        top: -600px;
+        background-color: blueviolet;
+        padding: 10px;
+        z-index: 7000; */
+      }
+    }
   
   
   
