--- a/src/pages/DiaryPage/DiaryPage.css
+++ b/src/pages/DiaryPage/DiaryPage.css
@@ -1,7 +1,7 @@
 .searchForbiddenFoods {
   position: relative;
   width: 100%;
-  max-width: 300px; /* Ajustează după nevoie */
+  max-width: 300px;
   margin-top: 10px;
 }
 
