--- a/src/components/DailyCaloriesForm/DailyCaloriesForm.css
+++ b/src/components/DailyCaloriesForm/DailyCaloriesForm.css
@@ -95,7 +95,7 @@
   font-size: 14px;
   padding: 13px 25px;
   height: 43px;
-  top: 30px;
+  top: 60px;
 }
 
 .modal-open-main .overlay-main {
@@ -227,7 +227,7 @@ ul li {
 
   .column .blood-type-options .submit-btn {
     left: -330px;
-    margin-top: -170px;
+    margin-top: 20px;
   }
 }
 
@@ -283,7 +283,7 @@ ul li {
   }
 
   .column .blood-type-options .submit-btn {
-    margin-top: -200px;
+    margin-top: 0;
     left: -240px;
     bottom: 910px;
     width: 210px;
